Added code for uploading an image
